src/Pages/Background/style.css
input[type="file"] {
  display: none;
}

.custom-file-upload {
  border: 1px solid #ccc;
  padding: 6px 12px;
  cursor: pointer;
  padding: 7px 22px;
  border: 1px solid var(--border-color-2);
  font-size: 14px;
  border-radius: 12px;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  background: var(--bg-button);
  font-weight: normal;
  transition: all 0.2s ease-in-out;
  color: var(--text-color);
}

label.custom-file-upload.upload-label:hover {
  background: var(--accent-4);
  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.215));
}

p.custom-file-upload-label {
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  padding: 0px 0px 10px 0px;
}

.custom-file-row {
  display: flex;
  align-items: center;
  align-content: center;
  justify-content: flex-start;
  flex-wrap: wrap;
  flex-direction: row;
}

.secondary-button {
  padding: 4.5px 22px;
  border: 1px solid var(--border-color-2);
  font-size: 14px;
  border-radius: 12px;
  max-width: 530px;
  cursor: pointer;
  background: var(--bg-button);
  color: var(--text-color);
  min-height: 50px;
  transition: all 0.2s ease-in-out;
  display: flex;
  align-items: center;
  justify-content: center;
  -webkit-user-select: none;
  user-select: none;
}

.secondary-button:active {
  background: var(--accent-4);
  box-shadow: 0px 0px 0px 3px var(--accent-4);
  position: relative;
  transition: all 0.1s ease-in-out;
}

button.secondary-button.keyword-button {
  display: flex;
  align-items: center;
  padding: 0px 16px 3px 16px;
  min-width: 72px;
  background: var(--bg-button);
  border-left: 0;
  border-radius: 0 12px 12px 0;
}

button.secondary-button:hover {
  background: var(--accent-4) !important;
  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.215)) !important;
}

input.keyword-input {
  min-width: 85%;
  border-radius: 12px 0 0 12px;
}

button.secondary-button.keyword-button {
  display: flex;
  align-items: center;
  padding: 0px 16px 3px 16px;
}

code {
  background-color: #9e9e9e3d;
  padding: 3px 7px 5px 7px;
  border-radius: 5px;
  font-size: 12px;
  font-family: monospace !important;
  color: #343434;
  color: var(--text-color-3);
}

button.upload-remove {
  border: none;
  background: none;
  border-radius: 12px;
  font-weight: 600;
  color: #8e8e8e;
  padding: 0 10px;
  cursor: pointer;
  transition: 0.2s all ease-in-out;
}

button.upload-remove:hover {
  color: var(--text-color);
}

.image-credits {
  font-size: 12px;
  font-style: italic;
  color: #8e8e8e;
  margin: 0;
  padding: 0px 0px 10px 0;
  transition: all 0.4s ease;
}

.fetch-status {
  display: flex;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  transition: all 0.4s ease;
  width: -moz-fit-content;
  width: fit-content;
  padding: 5px 23px;
  border-radius: 9px;
  margin: 3px 0 12px 0;
  transition: all 0.5s ease;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.fetch-status.found a {
  text-decoration: none;
  color: #30a27e;
  transition: all 0.4s ease;
}

.fetch-status.found a:hover {
  text-decoration: underline;
  transition: all 0.4s ease;
}

.fetch-status.found {
  color: #52823f;
  background-color: #04ff001a;
}

.fetch-status.loading {
  color: #566000;
  background-color: #b6c6081a;
  display: flex;
}

.fetch-status.error {
  color: #8b3416;
  background-color: #ff00001a;
}

